Tesla Clon Page

--- a/src/components/IndexHeader.astro
+++ b/src/components/IndexHeader.astro
@@ -12,7 +12,7 @@ import Logo from "./Logo.astro"
         <ul class="flex text-sm [&>li>a]:transition-colors [&>li>a]:duration-200 [&>li>a]:font-gray-800 [&>li>a]:font-semibold [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2">
             <li><a href="#">Vehículos</a></li>
             <li><a href="#">Energía</a></li>
-            <li><a href="#">Chargas</a></li>
+            <li><a href="#">Cargas</a></li>
             <li><a href="#">Descubre</a></li>
             <li><a href="#">Tienda</a></li>
         </ul>
